--- a/projeto-y/package.json
+++ b/projeto-y/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "express": "^4.21.0",
+    "express-session": "^1.18.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.11.3",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18"
   },
