--- a/projeto-y/package.json
+++ b/projeto-y/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "express-mysql-session": "^3.0.3",
-    "express-session": "^1.18.0",
+    "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "mysql2": "^3.11.3",
+    "mysql2": "^3.11.5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
