--- a/projeto-y/package.json
+++ b/projeto-y/package.json
@@ -18,7 +18,9 @@
     "mysql2": "^3.11.5",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "eslint": "^8",
